# hello-world-bazel-build

./: .gitignore  README.md  deployment.yaml
cpp-app/: BUILD  Dockerfile  WORKSPACE  WORKSPACE.bazel  bazel-bin  bazel-cpp-app  bazel-out  bazel-testlogs  get-time.h  main  main.cpp
cpp-app/src/: BUILD.bazel  get-time.cpp  main.cpp
python-app/: BUILD  WORKSPACE  bazel-bin  bazel-out  bazel-python-app  bazel-testlogs  deployment.yaml  server.py
